--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mern",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon ./src/server.js"
+    "server": "node ./src/server.js"
   },
   "keywords": [
     "ecommerce",
