--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "12.x"
   },
   "scripts": {
-    "server": "node ./src/server.js"
+    "start": "node ./src/server.js"
   },
   "keywords": [
     "ecommerce",
